fixed alignment for pagination

--- a/app/webroot/css/basic.css
+++ b/app/webroot/css/basic.css
@@ -904,6 +904,7 @@ width: 102px;
 .ttc-paging {
     float: right;
     width: 184px;
+    text-align: right;
 }
 
 .ttc-stack-filter input{
